<resources>
    <string name="google_maps_api_key" translatable="false">AIzaSyBGs5dEuqVaZE3MroigNEbXQE6c8nZrcQM</string>

    <string name="app_name" translatable="false">Paw</string>

    <!--Nav Drawer-->
    <string name="pet_list_title">Pet List</string>
    <string name="fave_list_title">Favorites</string>
    <string name="donation_title">Donation</string>
    <string name="communication_nav_menu_title">Communication</string>
    <string name="aboutUs_title">About Us</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Donation-->
    <string name="donation_head">I want to make donation. What can I donate?</string>
    <string name="donation_body">You can make food donation as many as you want!</string>
    <string name="howto_head">How can I make food donation?</string>
    <string name="howto_body">You can buy any dog food and send it to our address.</string>
    <string name="where_head">Where can I buy dog food?</string>
    <string name="where_body">You can buy online and send directly to our address too.</string>

    <!--AboutUs-->
    <string name="contact_info">İletişim Bilgileri</string>
    <string name="shelter_name_hint">Shelter Name</string>
    <string name="shelter_name">Aliağa Belediyesi Sokak Hayvanları Rehabilitasyon Merkezi</string>
    <string name="visit_hours_hint">Ziyaret Saatleri</string>
    <string name="visit_hours">12:00 – 15:30</string>
    <string name="address_hint">Address</string>
    <string name="address">Çaltıkdere Koyu, Aliağa/İZMİR</string>
    <string name="phone_hint">Telefon</string>
    <string name="phone">0 (232) 616 19 80</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="e_mail">bilgi@aliaga.bel.tr</string>

    <!--Arama dialogu-->
    <string name="search">Search</string>
    <string name="gender">Gender: </string>
    <string name="species">Species: </string>
    <string name="age">Age:</string>
    <string name="cancel">Cancel</string>

    <!--Pet Profil-->
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="health_history">Health History</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="temizmama">https://www.temizmama.com/</string>
    <string name="mamasepeti">http://www.mamasepeti.com/</string>

    <string-array name="species_array" translatable="false">
        <item>Affenpinscher</item>
        <item>Afghan Hound</item>
        <item>Airedale Terrier</item>
        <item>Akita</item>
        <item>Alaskan Malamute</item>
        <item>American English Coonhound</item>
        <item>American Eskimo Dog</item>
        <item>American Foxhound</item>
        <item>American Pit Bull Terrier</item>
        <item>American Water Spaniel</item>
        <item>Anatolian Shepherd Dog</item>
        <item>Appenzeller Sennenhunde</item>
        <item>Australian Cattle Dog</item>
        <item>Australian Shepherd</item>
        <item>Australian Terrier</item>
        <item>Azawakh</item>
        <item>Barbet</item>
        <item>Basenji</item>
        <item>Basset Hound</item>
        <item>Beagle</item>
        <item>Bearded Collie</item>
        <item>Bedlington Terrier</item>
        <item>Belgian Malinois</item>
        <item>Belgian Sheepdog</item>
        <item>Belgian Tervuren</item>
        <item>Berger Picard</item>
        <item>Bernese Mountain Dog</item>
        <item>Bichon Frise</item>
        <item>Black and Tan Coonhound</item>
        <item>Black Russian Terrier</item>
        <item>Bloodhound</item>
        <item>Bluetick Coonhound</item>
        <item>Bolognese</item>
        <item>Border Collie</item>
        <item>Border Terrier</item>
        <item>Borzoi</item>
        <item>Boston Terrier</item>
        <item>Bouvier des Flandres</item>
        <item>Boxer</item>
        <item>Boykin Spaniel</item>
        <item>Bracco Italiano</item>
        <item>Briard</item>
        <item>Brittany</item>
        <item>Brussels Griffon</item>
        <item>Bull Terrier</item>
        <item>Bulldog</item>
        <item>Bullmastiff</item>
        <item>Cairn Terrier</item>
        <item>Canaan Dog</item>
        <item>Cane</item>
        <item>Corso</item>
        <item>Cardigan Welsh</item>
        <item>Corgi</item>
        <item>Catahoula Leopard Dog</item>
        <item>Cavalier King</item>
        <item>Charles Spaniel</item>
        <item>Cesky Terrier</item>
        <item>Chesapeake Bay Retriever</item>
        <item>Chihuahua</item>
        <item>Chinese Crested</item>
        <item>Chinese Shar-Pei</item>
        <item>Chinook</item>
        <item>Chow Chow</item>
        <item>Clumber Spaniel</item>
        <item>Cockapoo</item>
        <item>Cocker Spaniel</item>
        <item>Collie</item>
        <item>Coton de Tulear</item>
        <item>Curly-Coated Retriever</item>
        <item>Dachshund</item>
        <item>Dalmatian</item>
        <item>Dandie</item>
        <item>Dinmont Terrier</item>
        <item>Doberman Pinscher</item>
        <item>Dogue de Bordeaux</item>
        <item>English Cocker Spaniel</item>
        <item>English Foxhound</item>
        <item>English Setter</item>
        <item>English Springer Spaniel</item>
        <item>English Toy Spaniel</item>
        <item>Entlebucher Mountain Dog</item>
        <item>Field Spaniel</item>
        <item>Finnish Lapphund</item>
        <item>Finnish Spitz</item>
        <item>Flat-Coated Retriever</item>
        <item>Fox Terrier</item>
        <item>French Bulldog</item>
        <item>German Pinscher</item>
        <item>German Shepherd Dog</item>
        <item>German Shorthaired Pointer</item>
        <item>German Wirehaired Pointer</item>
        <item>Giant Schnauzer</item>
        <item>Glen of Imaal Terrier</item>
        <item>Goldador</item>
        <item>Golden Retriever</item>
        <item>Goldendoodle</item>
        <item>Gordon Setter</item>
        <item>Great Dane</item>
        <item>Great Pyrenees</item>
        <item>Greater Swiss Mountain Dog</item>
        <item>Greyhound</item>
        <item>Harrier</item>
        <item>Havanese</item>
        <item>Ibizan Hound</item>
        <item>Icelandic Sheepdog</item>
        <item>Irish Red and White Setter</item>
        <item>Irish Setter</item>
        <item>Irish Terrier</item>
        <item>Irish Water Spaniel</item>
        <item>Irish Wolfhound</item>
        <item>Italian Greyhound</item>
        <item>Jack Russell Terrier</item>
        <item>Japanese Chin</item>
        <item>Korean Jindo Dog</item>
        <item>Keeshond</item>
        <item>Kerry Blue Terrier</item>
        <item>Komondor</item>
        <item>Kooikerhondje</item>
        <item>Kuvasz</item>
        <item>Labradoodle</item>
        <item>Labrador Retriever</item>
        <item>Lakeland Terrier</item>
        <item>Lancashire Heeler</item>
        <item>Leonberger</item>
        <item>Lhasa Apso</item>
        <item>Lowchen</item>
        <item>Maltese</item>
        <item>Maltese Shih Tzu</item>
        <item>Maltipoo</item>
        <item>Manchester Terrier</item>
        <item>Mastiff</item>
        <item>Miniature Pinscher</item>
        <item>Miniature Schnauzer</item>
        <item>Mutt</item>
        <item>Neapolitan Mastiff</item>
        <item>Newfoundland</item>
        <item>Norfolk Terrier</item>
        <item>Norwegian Buhund</item>
        <item>Norwegian Elkhound</item>
        <item>Norwegian Lundehund</item>
        <item>Norwich Terrier</item>
        <item>Nova Scotia Duck Tolling Re</item>triever
        <item>Old English Sheepdog</item>
        <item>Otterhound</item>
        <item>Papillon</item>
        <item>Peekapoo</item>
        <item>Pekingese</item>
        <item>Pembroke Welsh Corgi</item>
        <item>Petit Basset Griffon Vendee</item>n
        <item>Pharaoh Hound</item>
        <item>Plott</item>
        <item>Pocket Beagle</item>
        <item>Pointer</item>
        <item>Polish Lowland Sheepdog</item>
        <item>Pomeranian</item>
        <item>Poodle</item>
        <item>Portuguese Water Dog</item>
        <item>Pug</item>
        <item>Puggle</item>
        <item>Puli</item>
        <item>Pyrenean Shepherd</item>
        <item>Rat Terrier</item>
        <item>Redbone Coonhound</item>
        <item>Rhodesian Ridgeback</item>
        <item>Rottweiler</item>
        <item>Saint Bernard</item>
        <item>Saluki</item>
        <item>Samoyed</item>
        <item>Schipperke</item>
        <item>Schnoodle</item>
        <item>Scottish Deerhound</item>
        <item>Scottish Terrier</item>
        <item>Sealyham Terrier</item>
        <item>Shetland Sheepdog</item>
        <item>Shiba Inu</item>
        <item>Shih Tzu</item>
        <item>Siberian Husky</item>
        <item>Silky Terrier</item>
        <item>Skye Terrier</item>
        <item>Sloughi</item>
        <item>Small Munsterlander Pointer</item>
        <item>Soft Coated Wheaten Terrier</item>
        <item>Stabyhoun</item>
        <item>Staffordshire Bull Terrier</item>
        <item>Standard Schnauzer</item>
        <item>Sussex Spaniel</item>
        <item>Swedish Vallhund</item>
        <item>Tibetan Mastiff</item>
        <item>Tibetan Spaniel</item>
        <item>Tibetan Terrier</item>
        <item>Toy Fox Terrier</item>
        <item>Treeing Tennessee Brindle</item>
        <item>Treeing Walker Coonhound</item>
        <item>Vizsla</item>
        <item>Weimaraner</item>
        <item>Welsh Springer Spaniel</item>
        <item>Welsh Terrier</item>
        <item>West Highland White Terrier</item>
        <item>Whippet</item>
        <item>Wirehaired Pointing Griffon</item>
        <item>Xoloitzcuintli</item>
        <item>Yorkipoo</item>
        <item>Yorkshire Terrier</item>
    </string-array>

    <string-array name="age_array">
        <item>Baby (0–1 year)</item>
        <item>Young (1–3 years)</item>
        <item>Adult (3–5 years)</item>
    </string-array>

</resources>
